<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:id="@+id/sync_prefs"
        android:defaultValue="false"
        android:key="sync_prefs"
        android:title="Enable preferences sync" />
    <PreferenceCategory app:title="@string/ui"/>

    <ListPreference
        app:defaultValue="@string/dark_mode_def_value"
        app:entries="@array/dark_mode_entries"
        app:entryValues="@array/dark_mode_values"
        app:key="@string/dark_mode"
        app:title="@string/dark_mode"
        app:useSimpleSummaryProvider="true"/>
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>