<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mapFragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home_menu_item" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/userProfile"
            android:title="@string/user_settings_menu_item">
            <menu>
                <item
                    android:id="@+id/userProfileFragment"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/settings_menu_item" />

                <item
                    android:id="@+id/logoutItem"
                    android:icon="@drawable/ic_baseline_login_24"
                    android:title="@string/log_out_menu_item" />

            </menu>
        </item>
    </group>
</menu>